[gd_scene load_steps=3 format=2]

[ext_resource path="res://Assets/Fonts/grobold_16.tres" type="DynamicFont" id=1]
[ext_resource path="res://UI/Settings.gd" type="Script" id=2]

[node name="SettingsMenu" type="Control"]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 0
rect_min_size = Vector2( 350, 0 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 350.0
margin_bottom = 25.0

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer"]
margin_top = 3.0
margin_right = 173.0
margin_bottom = 22.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 1 )
text = "Gamemode: "

[node name="GameModes" type="OptionButton" parent="VBoxContainer/HBoxContainer"]
margin_left = 177.0
margin_right = 350.0
margin_bottom = 25.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 1 )
flat = true

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 29.0
margin_right = 350.0
margin_bottom = 54.0

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer2"]
margin_top = 3.0
margin_right = 173.0
margin_bottom = 22.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 1 )
text = "Map: "

[node name="Maps" type="OptionButton" parent="VBoxContainer/HBoxContainer2"]
margin_left = 177.0
margin_right = 350.0
margin_bottom = 25.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 1 )
flat = true
[connection signal="item_selected" from="VBoxContainer/HBoxContainer/GameModes" to="." method="_on_GameModes_item_selected"]
[connection signal="item_selected" from="VBoxContainer/HBoxContainer2/Maps" to="." method="_on_Maps_item_selected"]
